creating my project

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body,
+.app {
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.gradient {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.gradient h2 {
+  color: #fff;
+  margin-bottom: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.colorPicker {
+  display: flex;
+  gap: 3rem;
+  padding-bottom: 2rem;
+}
+
+.btnRandom {
+  padding: 10px 15px;
+  background: #358835;
+  color: #fff;
+  font-size: 10px;
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+}
+
+.btnRandom:hover {
+  /* background: #3e8e41; */
+  transform: scale(1.05);
+}
+.output {
+  margin-top: 2rem;
+  display: flex;
+  font-size: 8px;
+  align-items: center;
+  background: #fff;
+  padding: 5px 20px;
 }
